[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"
actix-rt = "2.3.0"
serde = { version = "1", features = ["derive"]}
config = "0.11"
uuid = { version="0.8.1", features = ["v4"] }
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest="=0.11.6"
tokio="1.12.0"
